--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">This is My Project</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Start Bootstrap has everything you 
-              </div>need to get your new website up and running in no time! All of t
-          </div>he templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+            <p class="text-faded mb-4">Project Testing
+              </div>Nama : Ilham Wahyudi
+              </div>Nim : 11453101956</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
           </div>
         </div>
