--- a/index.html
+++ b/index.html
@@ -95,6 +95,56 @@
           </div>
         </div>
       </div>
+      
+          <!-- Header -->
+    <header class="masthead">
+      <div class="container">
+        <div class="intro-text">
+          <div class="intro-lead-in">Welcome To My Project!</div>
+          <div class="intro-heading text-uppercase">Create By Tiara Ramadhani</div>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#link">Tell Me More</a>
+        </div>
+      </div>
+    </header>
+
+    <!-- Link -->
+    <section id="link">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">Link</h2>
+            <!--h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3 -->
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-4">
+            <!--span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+            </span-->
+            <h4 class="link-heading">UIN SUSKA Riau</h4>
+            <p class="text-muted">Let's check to the site <a href="http://uin-suska.ac.id">UIN SUSKA Riau</a>.</p>
+          </div>
+          <div class="col-md-4">
+            <!--span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+            </span-->
+            <h4 class="link-heading">Science And Technology Faculty</h4>
+            <p class="text-muted">Let's check to the site <a href="http://fst.uin-suska.ac.id">Faste</a>.</p>
+          </div>
+          <div class="col-md-4">
+            <!--span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+            </span-->
+            <h4 class="link-heading">Information System</h4>
+            <p class="text-muted">Let's check to the site <a href="http://sif.uin-suska.ac.id">SI</a>.</p>
+          </div>
+        </div>
+      </div>
+
+      
       <div class="container">
         <div class="row">
           <div class="col-lg-3 col-md-6 text-center">
