--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-lead-in">Welcome To My Project!</div>
-          <div class="intro-heading text-uppercase">Create By Tiara Ramadhani</div>
+          <div class="intro-heading text-uppercase">Create By Ilham Wahyudi</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#link">Tell Me More</a>
         </div>
       </div>
